--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "hexo-site",
   "version": "0.0.0",
   "private": true,
+  "homepage": "https://peterzhanghui.github.io/hexo-blog",
   "scripts": {
     "build": "hexo generate",
     "clean": "hexo clean",
