--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,7 +15,12 @@ jobs:
       with:
         submodules: true # Checkout private submodules(themes or something else).
     
-    # Caching dependencies to speed up workflows. (GitHub will remove any cache entries that have not been accessed in over 7 days.)
+    # 明确指定 Node.js 版本
+    - name: Setup Node.js
+      uses: actions/setup-node@v4
+      with:
+        node-version: '18'
+        
     - name: Cache node modules
       uses: actions/cache@v3
       id: cache
@@ -24,9 +29,12 @@ jobs:
         key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
         restore-keys: |
           ${{ runner.os }}-node-
+    
     - name: Install Dependencies
       if: steps.cache.outputs.cache-hit != 'true'
-      run: npm ci
+      run: |
+        npm install -g hexo-cli
+        npm ci
     
     # Deploy hexo blog website.
     - name: Deploy
@@ -34,10 +42,12 @@ jobs:
       uses: sma11black/hexo-action@v1.0.3
       with:
         deploy_key: ${{ secrets.DEPLOY_KEY }}
-        user_name: peterzhanghui  # (or delete this input setting to use bot account)
-        user_email: 1226559563@qq.com  # (or delete this input setting to use bot account)
-        commit_msg: ${{ github.event.head_commit.message }}  # (or delete this input setting to use hexo default settings)
-    # Use the output from the `deploy` step(use for test action)
+        user_name: peterzhanghui
+        user_email: 1226559563@qq.com
+        commit_msg: ${{ github.event.head_commit.message }}
+      env:
+        NODE_OPTIONS: --max_old_space_size=4096
+    
     - name: Get the output
       run: |
         echo "${{ steps.deploy.outputs.notify }}"
