--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,13 +30,11 @@ jobs:
           ${{ runner.os }}-node-
     
     - name: Install Dependencies
-      if: steps.cache.outputs.cache-hit != 'true'
-      run: npm ci
-    
-    # 替换原来的 hexo-action，使用自定义的部署步骤
-    - name: Install Hexo
       run: |
+        npm install
         npm install hexo-cli -g
+        npm install hexo --save
+        npm install hexo-deployer-git --save
         
     - name: Setup Git
       run: |
