chore: 优化GitHub Actions工作流，修正部署结果通知的语法

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -85,6 +85,6 @@ jobs:
               issue_number,
               owner,
               repo,
-              body: '🚀 部署${{ job.status == "success" && "成功" || "失败" }}!'
+              body: `🚀 部署${context.job.status === 'success' ? '成功' : '失败'}!`
             });
           }
