--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,3 @@
-
 name: Deploy
 
 on:
@@ -14,9 +13,14 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v4
       with:
-        submodules: true # Checkout private submodules(themes or something else).
+        submodules: true
     
-    # Caching dependencies to speed up workflows. (GitHub will remove any cache entries that have not been accessed in over 7 days.)
+    - name: Setup Node.js
+      uses: actions/setup-node@v4
+      with:
+        node-version: '20'
+        registry-url: 'https://registry.npmjs.org/'
+        
     - name: Cache node modules
       uses: actions/cache@v3
       id: cache
@@ -25,20 +29,77 @@ jobs:
         key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
         restore-keys: |
           ${{ runner.os }}-node-
-    - name: Install Dependencies
-      if: steps.cache.outputs.cache-hit != 'true'
-      run: npm ci
     
-    # Deploy hexo blog website.
-    - name: Deploy
-      id: deploy
-      uses: sma11black/hexo-action@v1.0.3
-      with:
-        deploy_key: ${{ secrets.DEPLOY_KEY }}
-        user_name: peterzhanghui  # (or delete this input setting to use bot account)
-        user_email: 1226559563@qq.com  # (or delete this input setting to use bot account)
-        commit_msg: ${{ github.event.head_commit.message }}  # (or delete this input setting to use hexo default settings)
-    # Use the output from the `deploy` step(use for test action)
-    - name: Get the output
+    - name: Install Dependencies
       run: |
-        echo "${{ steps.deploy.outputs.notify }}"
+        # 设置官方 npm 镜像源
+        npm config set registry https://registry.npmjs.org/
+        
+        # 安装特定版本的 npm
+        npm install -g npm@10.2.4
+        
+        # 清理之前的 node_modules 和 npm 缓存
+        rm -rf node_modules
+        npm cache clean --force
+        
+        # 使用 npm install
+        npm install --no-fund --no-audit --no-progress
+        
+        # 安装 hexo-cli
+        npm install hexo-cli --no-save
+        npm install hexo-deployer-git --save
+        
+    - name: Setup Git
+      run: |
+        git config --global user.name "peterzhanghui"
+        git config --global user.email "1226559563@qq.com"
+        
+    - name: Setup Deploy Key
+      env:
+        DEPLOY_KEY: ${{ secrets.DEPLOY_KEY }}
+      run: |
+        mkdir -p ~/.ssh
+        echo "$DEPLOY_KEY" > ~/.ssh/id_rsa
+        chmod 600 ~/.ssh/id_rsa
+        ssh-keyscan github.com >> ~/.ssh/known_hosts
+        
+    - name: Deploy
+      run: |
+        # 显示 hexo 版本
+        npx hexo version
+        
+        # 使用本地安装的 hexo-cli
+        npx hexo clean
+        npx hexo generate
+        
+        # 检查生成的文件
+        ls -la public/
+        
+        # 部署
+        npx hexo deploy
+      env:
+        NODE_OPTIONS: --max_old_space_size=4096
+        # 确保使用官方源
+        npm_config_registry: https://registry.npmjs.org/
+
+    - name: Cleanup
+      if: always()
+      run: |
+        rm -f ~/.ssh/id_rsa
+
+    - name: Notify deployment result
+      if: always()
+      uses: actions/github-script@v6
+      with:
+        github-token: ${{secrets.GITHUB_TOKEN}}
+        script: |
+          const { owner, repo } = context.repo;
+          const issue_number = context.issue?.number;
+          if (issue_number) {
+            github.rest.issues.createComment({
+              issue_number,
+              owner,
+              repo,
+              body: `🚀 部署${context.job.status === 'success' ? '成功' : '失败'}!`
+            });
+          }
