--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,7 +28,9 @@ jobs:
           restore-keys: |
             ${{ runner.OS }}-npm-cache
       - name: Install Dependencies
-        run: npm install
+        run: |
+          npm config set registry https://registry.npmmirror.com
+          npm install
       - name: Build
         run: npm run build
       - name: Upload Pages artifact
