--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "hexo-theme-landscape": "^0.0.3"
   },
   "engines": {
-    "node": "16"
+    "node": ">=18.0.0"
   },
   "devDependencies": {
     "sharp": "^0.34.3"
