更新package.json和package-lock.json，移除sharp开发依赖，调整Node.js版本要求至>=18.0.0，并优化GitHub Actions工作流以使用npm镜像源

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Install Dependencies
         run: |
           echo "尝试使用官方 NPM 源..."
-          npm config set registry https://registry.npmjs.org/
+          npm config set registry https://registry.npmmirror.com
           npm config set fund false
           npm config set audit false
           
