--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "private": true,
   "homepage": "https://peterzhanghui.github.io",
   "scripts": {
-    "build": "hexo clean && hexo generate",
-    "clean": "hexo clean",
-    "deploy": "hexo deploy",
-    "server": "hexo server"
+    "build": "npx hexo clean && npx hexo generate",
+    "clean": "npx hexo clean",
+    "deploy": "npx hexo deploy",
+    "server": "npx hexo server"
   },
   "hexo": {
     "version": "5.3.0"
@@ -15,6 +15,7 @@
   "dependencies": {
     "hexo": "^5.0.0",
     "hexo-asset-image": "^1.0.0",
+    "hexo-cli": "^4.3.0",
     "hexo-deployer-git": "^4.0.0",
     "hexo-generator-archive": "^1.0.0",
     "hexo-generator-category": "^1.0.0",
