--- a/package.json
+++ b/package.json
@@ -5,30 +5,32 @@
   "homepage": "https://peterzhanghui.github.io",
   "scripts": {
     "build": "npx hexo clean && npx hexo generate",
+    "ci-build": "npx hexo version && npx hexo clean && npx hexo generate",
     "clean": "npx hexo clean",
     "deploy": "npx hexo deploy",
     "server": "npx hexo server"
   },
   "hexo": {
-    "version": "5.3.0"
+    "version": "7.3.0"
   },
   "dependencies": {
-    "hexo": "^5.0.0",
+    "hexo": "^7.0.0",
     "hexo-asset-image": "^1.0.0",
     "hexo-cli": "^4.3.0",
     "hexo-deployer-git": "^4.0.0",
-    "hexo-generator-archive": "^1.0.0",
-    "hexo-generator-category": "^1.0.0",
-    "hexo-generator-index": "^2.0.0",
-    "hexo-generator-tag": "^1.0.0",
-    "hexo-renderer-ejs": "^1.0.0",
-    "hexo-renderer-marked": "^3.0.0",
-    "hexo-renderer-stylus": "^2.0.0",
-    "hexo-server": "^2.0.0",
+    "hexo-generator-archive": "^2.0.0",
+    "hexo-generator-category": "^2.0.0",
+    "hexo-generator-index": "^3.0.0",
+    "hexo-generator-tag": "^2.0.0",
+    "hexo-renderer-ejs": "^2.0.0",
+    "hexo-renderer-marked": "^6.0.0",
+    "hexo-renderer-stylus": "^3.0.0",
+    "hexo-server": "^3.0.0",
     "hexo-theme-fluid": "^1.8.7",
     "hexo-theme-landscape": "^0.0.3"
   },
   "engines": {
-    "node": ">=18.0.0"
+    "node": ">=18.0.0",
+    "npm": ">=8.0.0"
   }
 }
